# monty

./: .gitignore  CMakeLists.txt  README.md  add.c  div.c  error_processor.c  file_processor.c  free_stack.c  is_opcode.c  isa_number.c  main.c  mega_free.c  mod.c  monty.h  monty_errors.c  monty_errors.h  mul.c  nop.c  opcode.c  operations.h  pall.c  pint.c  pop.c  push.c  run_interpreter.c  run_operation.c  sub.c  swap.c
montycode/: prueba1.m  prueba2.m  prueba3.m
